--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Webapp text decripter">
     <meta name="keywords" content="decripter, webapp, text, encription">
     <link rel="icon" type="image/png" href="./img/favicon.png">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
