--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
-<html lang="es                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          ">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Webapp text decripter">
-    <meta name="keywords" content="decripter, webapp, text, encription">
-    <link rel="icon" type="image/png" href="./img/favicon.png">
-    <link rel="stylesheet" href="./css/normalize.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Birthstone&family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="language" content="es">
-    <meta name="geo.country" content="es">
-    <title>Encriptador de texto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <title>Text Encryptor</title>
 </head>
 <body>
-    
+    <header>
+        <img class="logo" src="./img/logo.jpg" alt="Logo de un candado color gris con su cerradura">
+    </header>
+    <main>
+        <section>
+            <textarea name="input-text" id="" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <div>
+                <h6 class="information">Solo letras minúsculas y sin acentos</h6>
+            </div>
+            <div class="buttons">
+            <button class="btn-encrypt">Encriptar</button>
+            <button class="btn-decrypt">Desencriptar</button>
+            </div>
+        </section>
+        <section>
+            <textarea class="encrypted-msg" cols="20" rows="10"></textarea>
+            <div>
+                <button class="btn-copy">Copiar</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
