working in css style and remove old logo.jpg

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </header>
     <main>
         <section>
-            <textarea name="input-text" id="" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <textarea class="input-text" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             <div>
-                <h6 class="information">Solo letras minúsculas y sin acentos</h6>
+                <h6 class="advice">Solo letras minúsculas y sin acentos</h6>
             </div>
             <div class="buttons">
             <button class="btn-encrypt">Encriptar</button>
